Fix IE11 issues with the Checkout block (https://github.com/woocommerce/woocommerce-blocks/pull/1941)
* Refactor useShippingRates so it doesn't use Object.fromEntries

* Refactor Checkout form CSS so it doesn't use grid autopositioning

* Fix Payment Methods title occupying too much space in IE11

* Fix payment methods tab icons not centered in IE11

--- a/plugins/woocommerce-blocks/assets/js/blocks/cart-checkout/checkout/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/cart-checkout/checkout/style.scss
@@ -8,15 +8,33 @@
 	.wc-block-checkout__billing-fields,
 	.wc-block-checkout__shipping-fields {
 		.wc-block-address-form {
-			display: grid;
-			grid-template-columns: 1fr 1fr;
-			grid-column-gap: $gap-small;
-		}
+			margin-left: #{-$gap-small / 2};
+			margin-right: #{-$gap-small / 2};
 
-		.wc-block-address-form__company,
-		.wc-block-address-form__address_1,
-		.wc-block-address-form__address_2 {
-			grid-column-start: span 2;
+			&::after {
+				content: "";
+				clear: both;
+				display: block;
+			}
+
+			.wc-block-text-input,
+			.wc-block-select {
+				float: left;
+				margin-left: #{$gap-small / 2};
+				margin-right: #{$gap-small / 2};
+				position: relative;
+				width: calc(50% - #{$gap-small});
+			}
+
+			.wc-block-address-form__company,
+			.wc-block-address-form__address_1,
+			.wc-block-address-form__address_2 {
+				width: calc(100% - #{$gap-small});
+			}
+
+			.wc-block-checkbox {
+				clear: both;
+			}
 		}
 	}
 }
